--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
-name = "compiler"
+name = "lua-compiler"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
 [dependencies]
+serde_json = "1.0"
+regex = "1"
