--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,23 @@
-[package]
-name = "lua-compiler"
-version = "0.1.0"
-edition = "2018"
-
 [dependencies]
 serde_json = "1.0"
 regex = "1"
+glob = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+fs_extra = "1.2"
+
+[package]
+name = "lua-compiler"
+version = "0.1.0"
+edition = "2021"
+
+[[bin]]
+name = "compile_love2d"
+path = "src/bin/compile_love2d.rs"
+
+[[bin]]
+name = "find_and_replace"
+path = "src/bin/find_and_replace.rs"
+
+[lib]
+name = "your_project_name"
+path = "src/lib.rs"
